implemented parallelism of iterations: now each parameter optimization iteration is executed in its own thread